WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153765
object.__lookupGetter__() / object.__lookupSetter__() does not work for native bindings
https://bugs.webkit.org/show_bug.cgi?id=153765
Summary
object.__lookupGetter__() / object.__lookupSetter__() does not work for nativ...
Chris Dumez
Reported
2016-02-01 14:05:51 PST
object.__lookupGetter__() / object.__lookupSetter__() does not work for native bindings. E.g. Element.prototype.__lookupGetter__("tagName") or Element.prototype.__lookupGetter__("nodeName") return undefined instead of a function.
Attachments
Patch
(10.81 KB, patch)
2016-02-01 21:28 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-02-01 14:06:14 PST
rdar://problem/24439699
Chris Dumez
Comment 2
2016-02-01 21:28:37 PST
Created
attachment 270470
[details]
Patch
Chris Dumez
Comment 3
2016-02-01 22:35:14 PST
Comment on
attachment 270470
[details]
Patch Clearing flags on attachment: 270470 Committed
r196004
: <
http://trac.webkit.org/changeset/196004
>
Chris Dumez
Comment 4
2016-02-01 22:35:19 PST
All reviewed patches have been landed. Closing bug.
Oliver Hunt
Comment 5
2016-02-02 10:05:41 PST
I find myself thinking that at this point we should probably just write these in JS
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug