object.__lookupGetter__() / object.__lookupSetter__() does not work for native bindings https://bugs.webkit.org/show_bug.cgi?id=153765 <rdar://problem/24439699>

Reviewed by Oliver Hunt.

Source/JavaScriptCore:

Add support for CustomAccessor slots to objectProtoFuncLookupGetter() and
objectProtoFuncLookupSetter() by return getOwnPropertyDescriptor().get / set.
getOwnPropertyDescriptor() now correctly deals with CustomAccessors since
r196001.

* runtime/ObjectPrototype.cpp:
(JSC::objectProtoFuncLookupGetter):
(JSC::objectProtoFuncLookupSetter):

LayoutTests:

Add layout tests to test that object.__lookupGetter__() / object.__lookupSetter__()
works for native bindings.

* js/lookupGetterGetter-native-bindings-expected.txt: Added.
* js/lookupGetterGetter-native-bindings.html: Added.

Canonical link: https://commits.webkit.org/171866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196004 268f45cc-cd09-0410-ab3c-d52691b4dbfc